[gd_scene load_steps=11 format=3 uid="uid://b1wxsghutirw0"]

[ext_resource type="Script" uid="uid://04c5iy7xunf5" path="res://play_scene/play_scene.gd" id="1_a0jw4"]
[ext_resource type="Script" uid="uid://b2o4rsmyktar7" path="res://characters/character.gd" id="2_5i074"]
[ext_resource type="Resource" uid="uid://0bgbunfojqx2" path="res://characters/ruie/ruie.tres" id="3_que2y"]
[ext_resource type="Resource" uid="uid://dd88m8r02r3jv" path="res://characters/kira/kira.tres" id="4_btd5q"]
[ext_resource type="Resource" uid="uid://b1lkftndb7spf" path="res://characters/stark/stark.tres" id="5_7pyap"]
[ext_resource type="Resource" uid="uid://cll88o6de06gg" path="res://characters/vayen/vayen.tres" id="6_uyxvy"]
[ext_resource type="Resource" uid="uid://mc7q51nsd1ay" path="res://characters/instructor.tres" id="7_741iy"]
[ext_resource type="Script" uid="uid://biyuj5ekuta5x" path="res://obfuscated.gd" id="8_if7y8"]
[ext_resource type="Script" uid="uid://cl0w6uwhleqn1" path="res://play_scene/screen_text.gd" id="8_tve3q"]

[sub_resource type="RichTextEffect" id="RichTextEffect_if7y8"]
script = ExtResource("8_if7y8")
metadata/_custom_type_script = "uid://biyuj5ekuta5x"

[node name="PlayScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_a0jw4")
characters = Array[ExtResource("2_5i074")]([ExtResource("3_que2y"), ExtResource("4_btd5q"), ExtResource("5_7pyap"), ExtResource("6_uyxvy"), ExtResource("7_741iy")])

[node name="SkipInterval" type="Timer" parent="."]
wait_time = 0.1

[node name="VoicePlayer" type="AudioStreamPlayer" parent="."]

[node name="SoundPlayer" type="AudioStreamPlayer" parent="."]

[node name="Backgrounds" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Sprites" type="Control" parent="."]
texture_filter = 2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 100

[node name="ScreenText" type="RichTextLabel" parent="MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/bold_italics_font_size = 30
theme_override_font_sizes/italics_font_size = 30
theme_override_font_sizes/mono_font_size = 30
theme_override_font_sizes/normal_font_size = 30
theme_override_font_sizes/bold_font_size = 40
bbcode_enabled = true
text = "[matrix clean=2.0 dirty=1.0 span=50] fdssdfsdfsdfdsfdsfds [/matrix]"
horizontal_alignment = 1
vertical_alignment = 1
custom_effects = [SubResource("RichTextEffect_if7y8")]
script = ExtResource("8_tve3q")

[connection signal="timeout" from="SkipInterval" to="." method="_on_skip_interval_timeout"]
